[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "dns-unbound-cache-reader"
version = "0.4.0"
description = "Read DNS cache from unbound"
readme = "README.md"
requires-python = ">=3.8"
license = "GPL-3.0-or-later"
keywords = ["network", "dns", "unbound"]
authors = [
  {name = "François De Keersmaeker", email = "francois.dekeersmaeker@uclouvain.be" }
]
maintainers = [
  {name = "François De Keersmaeker", email = "francois.dekeersmaeker@uclouvain.be" }
]

# Classifiers help users find your project by categorizing it.
#
# For a list of valid classifiers, see https://pypi.org/classifiers/
classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 3 - Alpha",

  # Pick your license as you wish
  #"License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",

  # Specify the Python versions you support here. In particular, ensure
  # that you indicate you support Python 3. These classifiers are *not*
  # checked by "pip install". See instead "requires-python" key in this file.
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",

  "Operating System :: OS Independent"
]

dependencies = [
    "fabric"
]

[project.urls]
"Homepage" = "https://forge.uclouvain.be/smart-home-network-security/dns-unbound-cache-reader"
"Source" = "https://forge.uclouvain.be/smart-home-network-security/dns-unbound-cache-reader"
